[gd_scene load_steps=5 format=3 uid="uid://caksmi57k4y3t"]

[ext_resource type="Theme" uid="uid://cfefgu8jbb3xm" path="res://Resources/Styles/default_theme.tres" id="1_2p0lb"]
[ext_resource type="Script" path="res://Scenes/HistoryPage/Scripts/history_screen.gd" id="1_blngv"]
[ext_resource type="PackedScene" uid="uid://2jcpfncolph" path="res://Scenes/Common/Labels/settings_managed_label.tscn" id="2_8maqh"]
[ext_resource type="PackedScene" uid="uid://d34hkypk02kw1" path="res://Scenes/Common/Buttons/settings_managed_text_button.tscn" id="4_c5jvf"]

[node name="HistoryScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource("1_2p0lb")
script = ExtResource("1_blngv")

[node name="ScrollContainer" type="ScrollContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_2p0lb")
horizontal_scroll_mode = 0
scroll_deadzone = 5

[node name="MarginContainer" type="MarginContainer" parent="ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource("1_2p0lb")

[node name="HistoryList" type="VBoxContainer" parent="ScrollContainer/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource("1_2p0lb")

[node name="EmptyHistoryLabel" parent="." instance=ExtResource("2_8maqh")]
layout_mode = 1
text = "No History
Get Rolling!"

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 60.0
grow_horizontal = 2

[node name="RestoreHistoryButton" parent="MarginContainer" instance=ExtResource("4_c5jvf")]
layout_mode = 2
size_flags_horizontal = 1
button_text = "Restore History"

[connection signal="short_pressed" from="MarginContainer/RestoreHistoryButton" to="." method="_on_restore_history_button_short_pressed"]
